<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ic_launcher_background"
    tools:context=".HandActivity">

    <TextView
        android:id="@+id/handTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/MyCards"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/btnBackToBoard"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackToBoard"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblHandSuspects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wine"
        android:padding="10dp"
        android:text="@string/Suspects"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/handTitle"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/handSuspectCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHandSuspects" />

    <TextView
        android:id="@+id/lblHandRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:padding="10dp"
        android:text="@string/Rooms"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/handSuspectCards"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/handRoomCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblHandRooms" />


    <TextView
        android:id="@+id/lblHandWeapons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:padding="10dp"
        android:text="@string/Weapons"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handRoomCards" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/handWeaponCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblHandWeapons"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/handWeaponCards">

        <TextView
            android:id="@+id/txtShowCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="You'll show the card: "
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="602dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="649dp">

            <Button
                android:id="@+id/btnShowCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="Show Card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:text="Skip"
                app:layout_constraintStart_toEndOf="@+id/btnShowCard"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>